1/24/2015
General
- Updated diffs to the most recent rev/commit.
- Removed ScriptLoader.cpp addition in the diff as that can cause conflicts if you have already edited that file. To combat this I updated the Finalized Installation portion of the TrinityCore and Eluna WotLK tutorials with a reminder of setting up mercenary_gossip.cpp in ScriptLoader.cpp.

12/1/2015
General
- TrinityCore diff is now updated
- Updated starter gear query and added default items.
- Removed CMakeLists.txt edit in all diffs because this conflicts with other edits people might have.

9/28/2015
General
- `mercenaries` column structure was changed
- Removed strength, intellect, spirit, stamina and agility stats since they don't need to be saved as they are initialized in-game

Fixes
- Fixed MaNGOS compile

9/26/2015
General
- Equipping an item on your Mercenary will now destroy the item in your inventory. If the Mercenary had an item already equipped, that item will still be replaced but will be given back
- Moved certain methods to MercenaryMgr since they didn't need to be in Mercenary class
- Cleaned up item equip statement a bit

9/24/2015
General
- `mercenary_starter_gear` column structure has changed
- New table `mercenary_world`
- New `creature_template` and `script_binding` (Mangos Only) table data
- You can now spawn creatures as Mercenaries. `mercenary_world` table holds Mercenary creation data. You can add gear for the Mercenary in `mercenary_starter_gear` using its entryId and that gear will be used by the Mercenary once hired

Fixes
- Fixed Mercenary role on creation not being correct sometimes or not at all
- Fixed ownerGUID being 0 if it wasn't set prior to the real `Create` method

9/22/2015
General
- Added new column to mercenary_spell table `isDefaultAura`, also updated the columns with appropriate default values
- Added new spells for warrior Mercenary in mercenary_spells table
- Updated warrior Mercenary sayings in mercenary_talk table with real (non-test) sayings